k8s/manifeste-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: exam
spec:
  selector:
    app: mysql
  ports :
    - protocol : TCP
      port : 3306
      targetPort: 3306

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  namespace: exam
spec:
  serviceName: db-service
  replicas: 2
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-database
        image: mysql:9.1.0-oracle
        resources:
          limits:
            cpu: "0.2"
            memory: 700Mi
          requests:
            cpu: "0.1"
            memory: 500Mi
        ports:
          - containerPort: 3306
            name: db-port
        volumeMounts:
          - name: storagevol
            mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/healthy
          initialDelaySeconds: 3
          periodSeconds: 5
        startupProbe:
          exec:
            command:
            - touch
            - /tmp/healthy
          failureThreshold: 30
          periodSeconds: 5

  volumeClaimTemplates:
  - metadata:
      name: storagevol
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
